2005-11-12  Sebastian Kurfuerst  <sebastian@garbage-group.de>

	* New feature 1573: switch back to admin user after user switch (SU-mode)

2005-11-11  Sebastian Kurfuerst  <sebastian@garbage-group.de>

	* New feature #1519: new option for lockSSL: get redirected to standard http after BE login with SSL
	* Fixed bug #1624: Copying of a file in the same folder in the "Filelist" module dosen't work
	* Feature request #1706: add "save + close" button in RTE wizard

2005-11-09  Rupert Germann  <rupi@gmx.li>

	* fix for function getBorderAttr: closes bugs 1360 and 1461

2005-11-09  Sebastian Kurfuerst  <sebastian@garbage-group.de>

	* New feature #1577: display clickmenus with XMLHTTP / ajax
	* Fixed bug 1066: Shortcut to a invisible page leads to a frontend error

2005-11-09	Ingmar Schlecht	<ingmar@typo3.org>

	* Made TCEForms put <label> tags around icons for moving/deleting repetitive Flexform items
	* Removed annoying feature of typo3/tab.js to focus the textarea

2005-11-08  Sebastian Kurfuerst  <sebastian@garbage-group.de>

	* Fixed bug #586: User Admin can't create new user
	* Fixed bug #1293: TCAdefaults.pages.doktype is not recognized by the wizard "Create new pages"
	* Fixed bug #1407: clearCache doesn't work when deleting records
	* Fixed bug #1570: on timeout in BE, popup appears all the time when clicking no
	* Fixed bug #1571: make new content element wizard easier to use

2005-11-01	Robert Lemke	<robert@typo3.org>

	* Added an is_array() check in t3lib_div::resolveSheetDefInDS() to prevent a fatal error in certain circumstances

2005-10-26  Kasper Skaarhoj  <kasper2005@typo3.com>

	* Implemented additional, simple API for logging to sys_log plus extended the sys-log with workspace awareness.
	* Implemented more workspace related features. In particular scripts like t3lib_tcemain and t3lib_userauthgroup have been heavily modified!

2005-10-21  Bernhard Kraft  <kraftb@kraftb.at>

	* Fixed a bug in t3lib/class.t3lib_page.php which broke the Direct Mailer
